--- a/muddery/worlddata/view/css/style.css
+++ b/muddery/worlddata/view/css/style.css
@@ -93,3 +93,12 @@ body {
     height: 100%;
     padding: 5px 5px;
 }
+
+#add_record {
+    margin: 0 0 10px 0;
+}
+
+.row-operate {
+    min-width: 0;
+}
+
