--- a/muddery/worlddata/view/css/main.css
+++ b/muddery/worlddata/view/css/main.css
@@ -3,6 +3,31 @@ body {
     overflow-x: hidden;
 }
 
+#login-view {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #66bbcc;
+}
+
+#login-box {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 300px;
+    height: 200px;
+    webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -o-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.title {
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
 .navbar {
     margin-bottom: 5px;
     min-height: 40px;
