--- a/muddery/worlddata/view/css/main.css
+++ b/muddery/worlddata/view/css/main.css
@@ -48,6 +48,10 @@ body {
     height: auto;
 }
 
+.navbar-drop-menu {
+    min-width: 80px;
+}
+
 #menu-box {
     position: absolute;
     padding: 0;
@@ -56,8 +60,13 @@ body {
 
 .panel-group {
     max-height: 770px;
-    overflow: auto;
+    overflow: visible;
     border: 0px none;
+}
+
+#login-message {
+    padding: 8px 0px;
+    color: #ff0000;
 }
 
 .leftMenu {
