--- a/muddery/worlddata/view/index.html
+++ b/muddery/worlddata/view/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no" />
         <meta charset="utf-8" />
 		<script language="javascript">
-			window.location.href = "./main.html";
+			window.location.href = "./views/main.html";
 		</script>
 	</head>
 <body>
