Modify the world editor.

--- a/muddery/web/website/templates/base.html
+++ b/muddery/web/website/templates/base.html
@@ -56,7 +56,7 @@
         <a href="/">Home</a> |
         <a href="http://cn.muddery.org/">About Us</a> |
         <a href="{% url 'admin:index' %}">Administer</a> |
-        <a href="/editor/main.html">Edit Game</a> |
+        <a href="/editor/index.html">Edit Game</a> |
         <a href="/webclient/index.html">Play Online</a>
       </div>
     </div>
