--- a/templates/example_cn/web/template_overrides/base.html
+++ b/templates/example_cn/web/template_overrides/base.html
@@ -56,7 +56,7 @@
         <a href="/">主页</a> |
         <a href="http://cn.muddery.org/">关于我们</a> |
         <a href="{% url 'admin:index' %}">管理页面</a> |
-        <a href="{% url 'worlddata:index' %}">编辑游戏</a> |
+        <a href="/editor/index.html">编辑游戏</a> |
         <a href="/webclient/index.html">开始游戏</a>
       </div>
     </div>
