--- a/muddery/worlddata/view/views/common_table.html
+++ b/muddery/worlddata/view/views/common_table.html
@@ -13,10 +13,13 @@
     </head>
 
     <body>
-        <div class="pull-right">
-            <button id="add_record" type="button" class="btn btn-default right">Add</button>
+        <div class="header">
+            <div class="pull-right">
+                <button id="add-record" type="button" class="btn btn-default right">Add</button>
+            </div>
+            <div style="clear:both"></div>
         </div>
-        <table id="data_table"></table>
+        <table id="data-table"></table>
         <script src="../libs/jquery-3.2.1.min.js"></script>
         <script src="../libs/bootstrap.min.js"></script>
         <script src="../libs/bootstrap-table.min.js"></script>
