--- a/muddery/worlddata/view/views/editor.html
+++ b/muddery/worlddata/view/views/editor.html
@@ -15,8 +15,16 @@
     <body>
         <form class="form-horizontal">
             <fieldset>
-                <div id="legend" class="">
-                    <legend id="form-name"></legend>
+                <legend id="legend">
+                    <div id="form-name" class="pull-left">
+                    </div>
+                    <div class="pull-right">
+                        <button id="exit-button" type="button" class="btn btn-default right">Back</button>
+                        <button id="save-record" type="button" class="btn btn-success right">Save</button>
+                        <button id="delete-record" type="button" class="btn btn-danger right">Delete</button>
+                    </div>
+                </legend>
+                <div id="form-message" class="hidden">
                 </div>
                 <div id="fields">
                 </div>
