Modify the world editor.

--- a/muddery/worlddata/view/views/common_table.html
+++ b/muddery/worlddata/view/views/common_table.html
@@ -14,6 +14,8 @@
 
     <body>
         <div class="header">
+            <div id="table-name" class="pull-left">
+            </div>
             <div class="pull-right">
                 <button id="add-record" type="button" class="btn btn-default right">Add</button>
             </div>
