--- a/muddery/worlddata/view/views/editor.html
+++ b/muddery/worlddata/view/views/editor.html
@@ -19,9 +19,9 @@
                     <div id="form-name" class="pull-left">
                     </div>
                     <div class="pull-right">
-                        <button id="exit-button" type="button" class="btn btn-default right">Back</button>
-                        <button id="save-record" type="button" class="btn btn-success right">Save</button>
-                        <button id="delete-record" type="button" class="btn btn-danger right">Delete</button>
+                        <button id="exit-button" type="button" class="btn btn-default right hidden">Back</button>
+                        <button id="save-record" type="button" class="btn btn-success right hidden">Save</button>
+                        <button id="delete-record" type="button" class="btn btn-danger right hidden">Delete</button>
                     </div>
                 </legend>
                 <div id="form-message" class="hidden">
