--- a/muddery/worlddata/view/css/main.css
+++ b/muddery/worlddata/view/css/main.css
@@ -121,7 +121,6 @@ body {
 }
 
 .content-frame {
-    display: none;
     border-style: none;
     overflow: hidden;
     width: 100%;
@@ -131,5 +130,17 @@ body {
 
 #add_record {
     margin: 0 0 10px 0;
+}
+
+.modal-header {
+    border-bottom: 0 none;
+}
+
+.modal-body {
+    font-size: 16px;
+}
+
+.modal-footer {
+    border-top: 0 none;
 }
 
