--- a/muddery/worlddata/view/views/main.html
+++ b/muddery/worlddata/view/views/main.html
@@ -535,12 +535,30 @@
                 </div>
             </div>
             <div class="col-xs-10" id="content-box">
-                <iframe id="table-frame" class="content-frame">
-                </iframe>
-                <iframe id="editor-frame" class="content-frame">
-                </iframe>
+                <div id="table-box">
+                </div>
+                <div id="editor-box">
+                </div>
             </div>
         </div>
+
+        <!-- Confirm Model -->  
+        <div class="modal fade" id="confirm-dialog">  
+            <div class="modal-dialog">  
+                <div class="modal-content message_align">  
+                    <div class="modal-header">  
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 id="confirm-title" class="modal-title"></h4>  
+                    </div>  
+                    <div id="confirm-content" class="modal-body"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" id="confirm-button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                    </div> 
+                </div>
+            </div>
+        </div>
+
         <script src="../libs/jquery-3.2.1.min.js"></script>
         <script src="../libs/bootstrap.min.js"></script>
         <script src="../config.js"></script>
