--- a/muddery/worlddata/view/views/main.html
+++ b/muddery/worlddata/view/views/main.html
@@ -510,13 +510,8 @@
                         <div id="collapseListGroup11" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading11">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left">
-                                    下载
-                                </button>
-                              </li>
-                              <li class="list-group-item">
-                                <button class="menu-item-left">
-                                    上传
+                                <button class="menu-item-left" data-page="load_files">
+                                    上传/下载
                                 </button>
                               </li>
                               <li class="list-group-item">
@@ -539,6 +534,8 @@
                 </div>
                 <div id="editor-box">
                 </div>
+                <div id="page-box">
+                </div>
             </div>
         </div>
 
@@ -552,7 +549,7 @@
                     </div>  
                     <div id="confirm-content" class="modal-body"></div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" id="cancel-button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         <button type="button" id="confirm-button" class="btn btn-primary" data-dismiss="modal">OK</button>
                     </div> 
                 </div>
