--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -70,11 +70,6 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="class_categories">
-                                    物体分类
-                                </button>
-                              </li>
-                              <li class="list-group-item">
                                 <button class="menu-item-left" data-table="equipment_types">
                                     装备类型
                                 </button>
@@ -139,11 +134,6 @@
                         <div id="collapseListGroup3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading3">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="character_careers">
-                                    角色职业
-                                </button>
-                              </li>
-                              <li class="list-group-item">
                                 <button class="menu-item-left" data-table="character_attributes_info">
                                     角色属性信息
                                 </button>
@@ -189,7 +179,7 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="loot_list">
+                                <button class="menu-item-left" data-table="character_loot_list">
                                     角色掉落表
                                 </button>
                               </li>
