Fix some bugs in the webclient.

--- a/templates/example_cn/web/webclient_overrides/webclient/main.html
+++ b/templates/example_cn/web/webclient_overrides/webclient/main.html
@@ -324,7 +324,7 @@
                     <button id="bar_msg_send" class="btn btn-default">Send</button>
                     <ul id="bar_msg_type_menu" class="dropdown-menu">
                         <li class="template">
-                            <a onclick="controller.selectMsgType(this)" class="dropdown-item"></a>
+                            <a class="dropdown-item"></a>
                         </li>
                     </ul>
                 </div>
