Modify the world editor.

--- a/muddery/worlddata/webclient/css/editor.css
+++ b/muddery/worlddata/webclient/css/editor.css
@@ -75,12 +75,12 @@ input[type=checkbox].check-box-control {
     margin-right: 10px;
 }
 
-.img-icon {
+.image-icon {
     width: 60px;
     height: 60px;
 }
 
-.img-image {
+.image-image {
     width: 320px;
     height: 240px;
 }
