Modify the world editor.

--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -92,27 +92,27 @@
                         <div id="collapseListGroup2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading2">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="world_areas">
+                                <button class="menu-item-left" data-table="world_areas" data-editor="object">
                                     区域
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="world_rooms">
+                                <button class="menu-item-left" data-table="world_rooms" data-editor="object">
                                     房间
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="world_exits">
+                                <button class="menu-item-left" data-table="world_exits" data-editor="object">
                                     出口
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="world_objects">
+                                <button class="menu-item-left" data-table="world_objects" data-editor="object">
                                     世界物体
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="world_npcs">
+                                <button class="menu-item-left" data-table="world_npcs" data-editor="object">
                                     世界NPC
                                 </button>
                               </li>
@@ -144,12 +144,12 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="world_npcs">
+                                <button class="menu-item-left" data-table="world_npcs" data-editor="object">
                                     世界NPC
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="common_characters">
+                                <button class="menu-item-left" data-table="common_characters" data-editor="object">
                                     普通角色
                                 </button>
                               </li>
@@ -164,7 +164,7 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="skills">
+                                <button class="menu-item-left" data-table="skills" data-editor="object">
                                     技能
                                 </button>
                               </li>
@@ -196,12 +196,12 @@
                         <div id="collapseListGroup4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading4">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="world_objects">
+                                <button class="menu-item-left" data-table="world_objects" data-editor="object">
                                     世界物体
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="common_objects">
+                                <button class="menu-item-left" data-table="common_objects" data-editor="object">
                                     普通物品
                                 </button>
                               </li>
@@ -211,17 +211,17 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="foods">
+                                <button class="menu-item-left" data-table="foods" data-editor="object">
                                     食物
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="skill_books">
+                                <button class="menu-item-left" data-table="skill_books" data-editor="object">
                                     技能书
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="equipments">
+                                <button class="menu-item-left" data-table="equipments" data-editor="object">
                                     装备
                                 </button>
                               </li>
@@ -273,7 +273,7 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="equipments">
+                                <button class="menu-item-left" data-table="equipments" data-editor="object">
                                     装备
                                 </button>
                               </li>
@@ -290,7 +290,7 @@
                         <div id="collapseListGroup6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading6">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="quests">
+                                <button class="menu-item-left" data-table="quests" data-editor="object">
                                     任务
                                 </button>
                               </li>
@@ -391,12 +391,12 @@
                         <div id="collapseListGroup9" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading9">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="shops">
+                                <button class="menu-item-left" data-table="shops" data-editor="object">
                                     商店
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="shop_goods">
+                                <button class="menu-item-left" data-table="shop_goods" data-editor="object">
                                     商品
                                 </button>
                               </li>
