Modify the world editor.

--- a/muddery/worlddata/webclient/views/object_editor.html
+++ b/muddery/worlddata/webclient/views/object_editor.html
@@ -30,13 +30,26 @@
                 </div>
             </fieldset>
         </form>
+        <div>
+            <h4>Events</h4>
+            <table>
+                <tr>
+                    <th>KEY</th>
+                    <th>NAME</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
         <script src="../libs/jquery-3.2.1.min.js"></script>
         <script src="../libs/bootstrap.min.js"></script>
         <script src="../config.js"></script>
         <script src="../service/service.js"></script>
         <script src="../utils/utils.js"></script>
         <script src="../utils/fields.js"></script>
-        <script src="../controller/editor.js"></script>
+        <script src="../controller/object_editor.js"></script>
     </body>
 
 </html>
