--- a/muddery/worlddata/webclient/views/object_editor.html
+++ b/muddery/worlddata/webclient/views/object_editor.html
@@ -31,19 +31,24 @@
                 </div>
             </fieldset>
         </form>
+        <div>
             <h4 class="event-title">Events</h4>
-            <button id="edit-event" type="button" class="btn btn-default">Edit</button>
-            <table class="event-table">
+            <button id="add-event" type="button" class="btn btn-default">Add</button>
+            <table id="event-table">
                 <tr>
-                    <th>TRIGGER</th>
-                    <th>EVENT</th>
-                    <th>ONE TIME</th>
-                    <th>ODDS</th>
-                    <th>CONDITION</th>
-                    <th></th>
+                    <th>Trigger</th>
+                    <th>Event</th>
+                    <th>One Time</th>
+                    <th>Odds</th>
+                    <th>Condition</th>
+                    <th>Operations</th>
                 </tr>
                 <tr>
                     <td>Empty</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                 </tr>
             </table>
