--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -455,11 +455,16 @@
                 </div>
             </div>
             <div class="col-xs-10" id="content-box">
-                <div id="table-box">
-                </div>
-                <div id="editor-box">
-                </div>
-                <div id="page-box">
+                <ul id="navigate-bar" class="nav nav-tabs">
+                    <li class="active"><a href="#identifier" data-toggle="tab">Home</a></li>
+                </ul>
+                <div id="contents">
+                    <div id="table-box">
+                    </div>
+                    <div id="editor-box">
+                    </div>
+                    <div id="page-box">
+                    </div>
                 </div>
             </div>
         </div>
