Modify the event editor.

--- a/muddery/worlddata/webclient/views/object_editor.html
+++ b/muddery/worlddata/webclient/views/object_editor.html
@@ -59,6 +59,7 @@
         <script src="../service/service.js"></script>
         <script src="../utils/utils.js"></script>
         <script src="../utils/fields.js"></script>
+        <script src="../controller/editor.js"></script>
         <script src="../controller/object_editor.js"></script>
     </body>
 
