--- a/muddery/worlddata/webclient/views/event_editor.html
+++ b/muddery/worlddata/webclient/views/event_editor.html
@@ -36,6 +36,7 @@
         <script src="../service/service.js"></script>
         <script src="../utils/utils.js"></script>
         <script src="../utils/fields.js"></script>
+        <script src="../controller/editor.js"></script>
         <script src="../controller/event_editor.js"></script>
     </body>
 
