--- a/muddery/worlddata/webclient/views/common_table.html
+++ b/muddery/worlddata/webclient/views/common_table.html
@@ -22,13 +22,13 @@
             <div style="clear:both"></div>
         </div>
         <table id="data-table"></table>
-        <script src="../libs/jquery-3.2.1.min.js"></script>
-        <script src="../libs/bootstrap.min.js"></script>
-        <script src="../libs/bootstrap-table.min.js"></script>
-        <script src="../config.js"></script>
-        <script src="../utils/utils.js"></script>
-        <script src="../service/service.js"></script>
-        <script src="../controller/common_table.js"></script>
+        <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="../libs/bootstrap.min.js" type="text/javascript"></script>
+        <script src="../libs/bootstrap-table.min.js" type="text/javascript"></script>
+        <script src="../config.js" type="text/javascript"></script>
+        <script src="../utils/utils.js" type="text/javascript"></script>
+        <script src="../service/service.js" type="text/javascript"></script>
+        <script src="../controller/common_table.js" type="text/javascript"></script>
     </body>
 
 </html>
