--- a/muddery/worlddata/webclient/views/event_editor.html
+++ b/muddery/worlddata/webclient/views/event_editor.html
@@ -9,7 +9,8 @@
         <meta name="HandheldFriendly" content="True" />
         <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="../css/bootstrap-table.min.css" rel="stylesheet" type="text/css" >
-        <link href="../css/editor.css" rel="stylesheet" type="text/css" />
+        <link href="../css/common_editor.css" rel="stylesheet" type="text/css" />
+        <link href="../css/event_editor.css" rel="stylesheet" type="text/css" />
     </head>
 
     <body>
@@ -30,14 +31,18 @@
                 </div>
             </fieldset>
         </form>
-        <script src="../libs/jquery-3.2.1.min.js"></script>
-        <script src="../libs/bootstrap.min.js"></script>
-        <script src="../config.js"></script>
-        <script src="../service/service.js"></script>
-        <script src="../utils/utils.js"></script>
-        <script src="../utils/fields.js"></script>
-        <script src="../controller/editor.js"></script>
-        <script src="../controller/event_editor.js"></script>
+        <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="../libs/bootstrap.min.js" type="text/javascript"></script>
+        <script src="../config.js" type="text/javascript"></script>
+        <script src="../service/service.js" type="text/javascript"></script>
+        <script src="../utils/utils.js" type="text/javascript"></script>
+        <script src="../utils/fields.js" type="text/javascript"></script>
+        <script src="../controller/common_editor.js" type="text/javascript"></script>
+        <script src="../controller/event_editor.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            var controller = new EventEditor();
+            $(document).ready(function() {controller.init()});
+        </script>
     </body>
 
 </html>
