Modify the world editor.

--- a/muddery/worlddata/webclient/views/object_editor.html
+++ b/muddery/worlddata/webclient/views/object_editor.html
@@ -33,7 +33,7 @@
         </form>
         <div>
             <h4 class="event-title">Events</h4>
-            <button id="add-event" type="button" class="btn btn-default">Add</button>
+            <button id="add-event" type="button" class="btn btn-sm btn-default">Add</button>
             <table id="event-table">
                 <tr>
                     <th>Trigger</th>
