--- a/muddery/worlddata/webclient/views/event_editor.html
+++ b/muddery/worlddata/webclient/views/event_editor.html
@@ -31,6 +31,12 @@
                 </div>
             </fieldset>
         </form>
+        <div>
+            <h4 class="event-data-title">Event Data</h4>
+            <button id="add-event-data" type="button" class="btn btn-sm btn-default">Add</button>
+            <table id="event-data">
+            </table>
+        </div>
         <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="../libs/bootstrap.min.js" type="text/javascript"></script>
         <script src="../config.js" type="text/javascript"></script>
