--- a/muddery/worlddata/webclient/views/event_editor.html
+++ b/muddery/worlddata/webclient/views/event_editor.html
@@ -39,6 +39,7 @@
         </div>
         <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="../libs/bootstrap.min.js" type="text/javascript"></script>
+        <script src="../libs/bootstrap-table.min.js" type="text/javascript"></script>
         <script src="../config.js" type="text/javascript"></script>
         <script src="../service/service.js" type="text/javascript"></script>
         <script src="../utils/utils.js" type="text/javascript"></script>
