--- a/muddery/worlddata/webclient/views/load_files.html
+++ b/muddery/worlddata/webclient/views/load_files.html
@@ -72,12 +72,12 @@
             </div>
         </fieldset>
 
-        <script src="../libs/jquery-3.2.1.min.js"></script>
-        <script src="../libs/bootstrap.min.js"></script>
-        <script src="../config.js"></script>
-        <script src="../service/service.js"></script>
-        <script src="../utils/utils.js"></script>
-        <script src="../controller/load_files.js"></script>
+        <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="../libs/bootstrap.min.js" type="text/javascript"></script>
+        <script src="../config.js" type="text/javascript"></script>
+        <script src="../service/service.js" type="text/javascript"></script>
+        <script src="../utils/utils.js" type="text/javascript"></script>
+        <script src="../controller/load_files.js" type="text/javascript"></script>
     </body>
 
 </html>
