--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -479,11 +479,11 @@
             </div>
         </div>
 
-        <script src="../libs/jquery-3.2.1.min.js"></script>
-        <script src="../libs/bootstrap.min.js"></script>
-        <script src="../config.js"></script>
-        <script src="../service/service.js"></script>
-        <script src="../controller/main.js"></script>
+        <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
+        <script src="../libs/bootstrap.min.js" type="text/javascript"></script>
+        <script src="../config.js" type="text/javascript"></script>
+        <script src="../service/service.js" type="text/javascript"></script>
+        <script src="../controller/main.js" type="text/javascript"></script>
     </body>
 
 </html>
