--- a/muddery/worlddata/webclient/views/event_editor.html
+++ b/muddery/worlddata/webclient/views/event_editor.html
@@ -32,9 +32,9 @@
             </fieldset>
         </form>
         <div>
-            <h4 class="event-data-title">Event Data</h4>
-            <button id="add-event-data" type="button" class="btn btn-sm btn-default">Add</button>
-            <table id="event-data">
+            <h4 class="action-title">Action Data</h4>
+            <button id="add-action" type="button" class="btn btn-sm btn-default">Add</button>
+            <table id="action-table">
             </table>
         </div>
         <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
