--- a/muddery/worlddata/webclient/views/common_editor.html
+++ b/muddery/worlddata/webclient/views/common_editor.html
@@ -36,7 +36,7 @@
         <script src="../service/service.js" type="text/javascript"></script>
         <script src="../utils/utils.js" type="text/javascript"></script>
         <script src="../utils/fields.js" type="text/javascript"></script>
-        <script src="../controller/editor.js" type="text/javascript"></script>
+        <script src="../controller/common_editor.js" type="text/javascript"></script>
         <script type="text/javascript">
             var controller = new CommonEditor();
             $(document).ready(function() {controller.init()});
