Modify the dialogue editor.

--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -327,7 +327,7 @@
                         <div id="collapseListGroup8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading8">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-table="dialogues">
+                                <button class="menu-item-left" data-table="dialogues" data-editor="dialogue">
                                     对话列表
                                 </button>
                               </li>
