--- a/muddery/worlddata/webclient/views/dialogue_editor.html
+++ b/muddery/worlddata/webclient/views/dialogue_editor.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-
+<!doctype html>
+<html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
-        <meta name="HandheldFriendly" content="True" />
+        <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
+
         <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="../css/bootstrap-table.min.css" rel="stylesheet" type="text/css" >
         <link href="../css/common_editor.css" rel="stylesheet" type="text/css" />
-        <link href="../css/dialogue_editor.css" rel="stylesheet" type="text/css" />
+        <link href="../css/jsplumb_main.css" rel="stylesheet" type="text/css" >
+        <link href="../css/dialogue_editor.css" rel="stylesheet" type="text/css" >
     </head>
-
     <body>
         <form class="form-horizontal">
             <fieldset>
@@ -31,24 +28,41 @@
                 </div>
             </fieldset>
         </form>
-        <div>
-            <h4 class="sentence-title">Sentences</h4>
-            <button id="add-sentence" type="button" class="btn btn-sm btn-default">Add</button>
-            <table id="sentence-table"></table>
+
+        <div class="sentences-window">
+            <div class="surface" id="canvas">
+            </div>
+            <div class="sentence-node template">
+                <span class="content"></span>
+                <div class="sentence-footer">
+                    <div class="add-connection">
+                    </div>
+                </div>
+            </div>
+            <div class="description">
+                <h4>Introduction</h4>
+                <p>Click and drag new Connections from the blue div in each element.</p>
+                <p>Double click on a sentence to edit it.</p>
+                <p>Click on a connection to delete it.</p>
+                <p>Double click on whitespace to add a new sentence</p>
+            </div>
         </div>
+
         <script src="../libs/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="../libs/bootstrap.min.js" type="text/javascript"></script>
         <script src="../libs/bootstrap-table.min.js" type="text/javascript"></script>
+        <script src="../libs/jsplumb.js"></script>
         <script src="../config.js" type="text/javascript"></script>
         <script src="../service/service.js" type="text/javascript"></script>
         <script src="../utils/utils.js" type="text/javascript"></script>
         <script src="../utils/fields.js" type="text/javascript"></script>
         <script src="../controller/common_editor.js" type="text/javascript"></script>
-        <script src="../controller/dialogue_editor.js" type="text/javascript"></script>
+        <script src="../controller/dialogue_editor.js"></script>
         <script type="text/javascript">
             var controller = new DialogueEditor();
             $(document).ready(function() {controller.init()});
+            jsPlumb.ready(function() {controller.onJsPlumbReady()});
         </script>
-    </body>
 
+    </body>
 </html>
