--- a/muddery/worlddata/webclient/css/common_editor.css
+++ b/muddery/worlddata/webclient/css/common_editor.css
@@ -85,13 +85,26 @@ input[type=checkbox].check-box-control {
     height: 240px;
 }
 
-.icon-input-control, .image-input-control {
+.control-buttons {
     padding-left: 0;
     border: none;
     -webkit-box-shadow: none;
     box-shadow: none;
 }
 
+.image-input-control {
+    padding-left: 5px;
+
+}
+
+input[type=file].image-input-control {
+    display: inline;
+}
+
 .edit-row, .delete-row {
     margin: 1px 2px;
+}
+
+.editor-image {
+    border: 1px solid #ccc;
 }
