--- a/muddery/worlddata/webclient/views/common_table.html
+++ b/muddery/worlddata/webclient/views/common_table.html
@@ -29,6 +29,10 @@
         <script src="../utils/utils.js" type="text/javascript"></script>
         <script src="../service/service.js" type="text/javascript"></script>
         <script src="../controller/common_table.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            var controller = new CommonTable();
+            $(document).ready(function() {controller.init()});
+        </script>
     </body>
 
 </html>
